2. basic header template and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
 	<header class="header">
-		
+		<div class="header__container">
+			<div class="header__logo">
+				<img src="img/header/logo.svg" alt="Logo">
+			</div>
+			<div class="header__content">
+				<ul class="header__menu">
+					<li><a href="#">about us</a></li>
+					<li><a href="#">services</a></li>
+					<li><a href="#">use Cases</a></li>
+					<li><a href="#">pricing</a></li>
+					<li><a href="#">blog</a></li>
+				</ul>
+				<button class="header__button button">request a quote</button>
+			</div>
+		</div>
 	</header>
 	<main class="main">
 		
