3. basic hero template and styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
 		</div>
 	</header>
 	<main class="main">
-		
+		<div class="main__hero hero">
+			<div class="hero__container">
+				<div class="hero__content">
+					<h1 class="hero__title">Navigating the digital landscape for success</h1>
+					<p class="hero__subtitle">Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
+					<button class="hero__button button">Book a consultation</button>
+				</div>
+				<div class="hero__image">
+					<img src="img/hero/illustration.svg" alt="Illustration">
+				</div>
+			</div>
+		</div>
 	</main>
 	<footer class="footer">
 	</footer>
