4. basic partners template and styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>
 	</header>
 	<main class="main">
-		<div class="main__hero hero">
+		<section class="hero">
 			<div class="hero__container">
 				<div class="hero__content">
 					<h1 class="hero__title">Navigating the digital landscape for success</h1>
@@ -37,7 +37,31 @@
 					<img src="img/hero/illustration.svg" alt="Illustration">
 				</div>
 			</div>
-		</div>
+		</section>
+		<section class="partners">
+			<div class="partners__container">
+				<ul class="partners__list">
+					<li class="partners__item">
+						<img src="img/partners/amazon.svg" alt="Amazon logo">
+					</li>
+					<li class="partners__item">
+						<img src="img/partners/dribbble.svg" alt="Dribbble logo">
+					</li>
+					<li class="partners__item">
+						<img src="img/partners/hubspot.svg" alt="HubSpot logo">
+					</li>
+					<li class="partners__item">
+						<img src="img/partners/notion.svg" alt="Notion logo">
+					</li>
+					<li class="partners__item">
+						<img src="img/partners/neftlix.svg" alt="Neftlix logo">
+					</li>
+					<li class="partners__item">
+						<img src="img/partners/zoom.svg" alt="Zoom logo">
+					</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 	<footer class="footer">
 	</footer>
