7. basic cases template and styles

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 		</section>
 		<section class="services">
 			<div class="services__container">
-				<div class="services__info">
+				<div class="services__info section-info">
 					<div class="services__title section-title">services</div>
-					<div class="servies__subtitle">
+					<div class="servies__subtitle section-subtitle">
 						At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include:
 					</div>
 				</div>
@@ -172,6 +172,41 @@
 						<img src="img/services/offer.svg" alt="Offer illustration">
 					</div>
 				</div>
+			</div>
+		</section>
+		<section class="cases">
+			<div class="cases__container">
+				<div class="cases__info section-info">
+					<div class="cases__title section-title">case studies</div>
+					<div class="cases__subtitle section-subtitle">Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies</div>
+				</div>
+				<ul class="cases__content">
+					<li class="cases__item">
+						<div class="cases__about">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in website traffic and a 25% increase in sales.</div>
+						<div class="cases__link">
+							<a href="#">Learn more</a>
+							<a href="#"><img src="img/services/green-arrow.svg" alt="arrow"></a>
+						</div>
+					</li>
+					<li class="cases__item">
+						<div class="cases__about">
+							For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for key keywords and a 200% increase in organic traffic.
+						</div>
+						<div class="cases__link">
+							<a href="#">Learn more</a>
+							<a href="#"><img src="img/services/green-arrow.svg" alt="arrow"></a>
+						</div>
+					</li>
+					<li class="cases__item">
+						<div class="cases__about">
+							For a national retail chain, we created a social media marketing campaign that increased followers by 25% and generated a 20% increase in online sales.
+						</div>
+						<div class="cases__link">
+							<a href="#">Learn more</a>
+							<a href="#"><img src="img/services/green-arrow.svg" alt="arrow"></a>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</section>
 	</main>
