8. basic process template

--- a/index.html
+++ b/index.html
@@ -209,6 +209,100 @@
 				</ul>
 			</div>
 		</section>
+		<section class="process">
+			<div class="process__container">
+				<div class="process__info section-info">
+					<div class="process__title section-title">our working process</div>
+					<div class="process__subtitle section-subtitle">Step-by-Step Guide to Achieving Your Business Goals</div>
+				</div>
+				<div class="process__content">
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number">01.</div>
+								<div class="process__step-title">Consultation</div>
+							</div>
+							<div class="process__step-button">+</div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number"></div>
+								<div class="process__step-title"></div>
+							</div>
+							<div class="process__step-button"></div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number"></div>
+								<div class="process__step-title"></div>
+							</div>
+							<div class="process__step-button"></div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number"></div>
+								<div class="process__step-title"></div>
+							</div>
+							<div class="process__step-button"></div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number"></div>
+								<div class="process__step-title"></div>
+							</div>
+							<div class="process__step-button"></div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+					<div class="process__step">
+						<div class="process__step-top">
+							<div class="process_step-info">
+								<div class="process__step-number"></div>
+								<div class="process__step-title"></div>
+							</div>
+							<div class="process__step-button"></div>
+						</div>
+						<div class="process__step-bottom">
+							<p>
+								During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer class="footer">
 	</footer>
